# signal-fish-client-rust

./: .dockerignore  .gitattributes  .gitignore  .lychee.toml  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  .typos.toml  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  llms.txt  mkdocs.yml  pr-description.md  requirements-docs.txt
.cargo/: config.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.devcontainer/.cargo/: config.toml
.devcontainer/scripts/: post-start.sh
.github/: copilot-instructions.md  dependabot.yml  required-checks.json
.github/workflows/: ci.yml  coverage.yml  deep-safety.yml  dependabot-auto-merge.yml  docs-deploy.yml  docs-validation.yml  examples-validation.yml  godot-web.yml  no-panics.yml  prepare-release.yml  protocol-sync.yml  publish.yml  repository-policy.yml  security-supply-chain.yml  semver-checks.yml  unused-deps.yml  wasm.yml  workflow-lint.yml
.llm/: context.md
.llm/skills/: async-rust-patterns.md  changelog-discipline.md  ci-configuration.md  crate-publishing.md  devcontainer-cross-platform.md  doc-accuracy-guarantees.md  doc-drift-validation.md  error-handling.md  event-lifecycle-timing.md  ffi-safety.md  godot-websocket.md  index.md  keep-a-changelog-format.md  markdown-and-doc-validation.md  protocol-versioning-and-negotiation.md  protocol-wire-conformance.md  public-api-design.md  release-recovery.md  serde-patterns.md  shared-core-drivers.md  shell-portability.md  source-code-scanning.md  testing-async.md  tracing-instrumentation.md  transport-abstraction.md  v3-delivery-accountability.md  webrtc-mesh-signaling.md  websocket-client.md
.llm/skills/async-rust-patterns/: SKILL.md
.llm/skills/changelog-discipline/: SKILL.md
.llm/skills/ci-configuration/: SKILL.md
.llm/skills/crate-publishing/: SKILL.md
.llm/skills/devcontainer-cross-platform/: SKILL.md
.llm/skills/doc-accuracy-guarantees/: SKILL.md
.llm/skills/doc-drift-validation/: SKILL.md
.llm/skills/error-handling/: SKILL.md
.llm/skills/event-lifecycle-timing/: SKILL.md
.llm/skills/ffi-safety/: SKILL.md
.llm/skills/github-operations/: SKILL.md
.llm/skills/godot-websocket/: SKILL.md
.llm/skills/keep-a-changelog-format/: SKILL.md
.llm/skills/markdown-and-doc-validation/: SKILL.md
.llm/skills/protocol-versioning-and-negotiation/: SKILL.md
.llm/skills/protocol-wire-conformance/: SKILL.md
.llm/skills/public-api-design/: SKILL.md
.llm/skills/release-recovery/: SKILL.md
.llm/skills/serde-patterns/: SKILL.md
.llm/skills/shared-core-drivers/: SKILL.md
crates/signal-fish-client-godot/: Cargo.toml  README.md
crates/signal-fish-client-godot/src/: lib.rs
docs/: changelog.md  client.md  concepts.md  delivery.md  errors.md  events.md  examples.md  fortress.md  getting-started.md  index.md  mesh-guide.md  migration-0.8.md  migration-0.9.md  protocol-versioning.md  protocol.md  releasing.md  transport.md  wasm.md
docs/includes/: abbreviations.md
docs/stylesheets/: custom.css  extra.css
examples/: basic_lobby.rs  custom_transport.rs  load_lab.rs  mesh_session.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_binary_game_data.rs  fuzz_client_message.rs  fuzz_server_message.rs
fuzz/seeds/fuzz_client_message/: authenticate  game_data  join_room  leave_room  ping
fuzz/seeds/fuzz_server_message/: authenticated  error  game_data  pong  room_left
hooks/: llms_txt.py  rustdoc_codeblocks.py
progress/: session-001-godot-adapter-split.md  session-002-server-0.4-conformance.md  session-004-godot-websocket-transport.md  session-005-godot-browser-e2e.md  session-017-bounded-godot-throughput.md  session-018-fortress-multiprocess-regression.md  session-020-issue-61-completion.md
proptest-regressions/: polling_client.txt
scripts/: audit-repository-rules.py  cargo-retry.sh  check-admonitions.py  check-all.sh  check-devcontainer-compat.sh  check-docs-rendering.sh  check-docsrs.sh  check-ffi-safety.sh  check-no-panics.sh  check-required-checks.py  check-target-gated-doc-links.sh  check-test-io-unwrap.sh  check-test-quality.sh  check-workflows.sh  ci-validate.sh  extract-rust-snippets.sh  godot-e2e-validators.mjs  install-hooks.sh  pre-commit-docs.sh  pre-commit-llm.py  release.py  run-godot-fortress-e2e.mjs  run-godot-web-smoke.mjs  test-godot-e2e-validators.mjs  test_audit_repository_rules.py  test_check_admonitions.py  test_check_devcontainer_compat.sh  test_check_ffi_safety.sh  test_check_target_gated_doc_links.sh  test_check_test_quality.sh  test_pre_commit_llm.py  test_release.py  test_required_checks.py  test_shell_portability.sh  validate-devcontainer-docs.sh  validate-docs.sh  validate.sh  verify-sccache.sh
src/: accountability.rs  client.rs  client_api.rs  client_core.rs  error.rs  error_codes.rs  event.rs  lib.rs  mesh.rs  polling_client.rs  protocol.rs  signal.rs  transport.rs  webrtc.rs
src/protocol/: binary.rs
src/transports/: emscripten_websocket.rs  godot_websocket.rs  mod.rs  websocket.rs
tests/: ci_config_tests.rs  client_tests.rs  compatibility.toml  compatibility_manifest_tests.rs  error_code_conformance_tests.rs  godot_adapter_policy_tests.rs  negotiation_robustness_tests.rs  polling_parity_tests.rs  protocol_tests.rs  real_server_e2e.rs  shared_core_policy_tests.rs  wire_golden_tests.rs
tests/common/: mod.rs
tests/fortress-relay-e2e/: .gitignore  Cargo.toml  README.md
tests/fortress-relay-e2e/src/: main.rs  relay.rs
tests/fortress-relay-e2e/tests/: multiprocess.rs
tests/godot-compat-min/: Cargo.toml
tests/godot-compat-min/src/: lib.rs
tests/godot-web-smoke/: .gitignore  Cargo.toml  README.md
tests/godot-web-smoke/project/: custom_shell.html  export_presets.cfg  main.tscn  project.godot  signal_fish_smoke.gdextension
tests/godot-web-smoke/src/: fortress.rs  lib.rs
tests/server-spec/: PROVENANCE.toml  README.md  signal-fish-protocol.asyncapi.yaml
tests/wire-samples/: PROVENANCE.toml  README.md  v2-client-messages.jsonl  v2-server-messages.jsonl  v3-client-messages.jsonl  v3-server-messages.jsonl
(+8 files in other folders)
