[package]
name = "signal-fish-client"
version.workspace = true
publish = ["crates-io"]
edition = "2021"
license = "MIT"
authors = ["Ambiguous Interactive <eli@theambiguous.co>"]
description = "Transport-agnostic Rust client for the Signal Fish multiplayer signaling protocol"
repository = "https://github.com/Ambiguous-Interactive/signal-fish-client-rust"
homepage = "https://Ambiguous-Interactive.github.io/signal-fish-client-rust/"
documentation = "https://docs.rs/signal-fish-client"
keywords = ["gamedev", "signaling", "multiplayer", "networking", "matchmaking"]
categories = ["game-engines", "network-programming"]
rust-version = "1.87.0"
readme = "README.md"
include = [
    "/src/**",
    "/examples/**",
    "/tests/**",
    "!/tests/godot_adapter_policy_tests.rs",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/CHANGELOG.md",
]

[features]
default = ["transport-websocket"]
transport-websocket = [
    "dep:tokio-tungstenite",
    "dep:futures-util",
    "tokio-runtime",
]
# Requires --target wasm32-unknown-emscripten; compile_error!() fires on other targets.
transport-websocket-emscripten = ["polling-client"]
polling-client = []
tokio-runtime = ["tokio/rt", "tokio/time"]
# Protocol v3 mesh orchestration helpers (MeshSession tracker + WebRtcDriver seam).
# Pure-std, zero extra dependencies.
mesh = []

[dependencies]
# Async
# 1.21 is the true minimum: Sender::max_capacity() (1.21) and
# Sender::capacity() (1.5) back send_capacity()/max_send_capacity()
# and the SendBufferFull capacity report.
tokio = { version = "1.21", features = ["sync", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
rmp = "0.8"
rmp-serde = "1.3"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# Optional: WebSocket transport
tokio-tungstenite = { version = "0.30", optional = true }
futures-util = { version = "0.3", optional = true, features = ["sink"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["v4", "serde", "js"] }

[dev-dependencies]
tokio = { version = "1.21", features = ["full"] }
futures-util = "0.3"
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "1.0"
# Used by the wire-sample provenance policy test to verify checksums.
sha2 = "0.11"
# Generates and shrinks polling-driver scheduler transition sequences.
proptest = "1.7"

[[example]]
name = "basic_lobby"
required-features = ["transport-websocket"]

[[example]]
name = "custom_transport"
required-features = ["tokio-runtime"]

[[example]]
name = "mesh_session"
required-features = ["mesh", "tokio-runtime"]

[[example]]
name = "load_lab"
required-features = ["transport-websocket"]

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"

[workspace]
members = ["crates/signal-fish-client-godot"]
resolver = "2"

[workspace.package]
version = "0.8.0"

[workspace.dependencies]
signal-fish-client = { version = "=0.8.0", path = ".", default-features = false }
