[package]
name = "signal-fish-fortress-relay-e2e"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
fortress-rollback = "=0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-fish-client = { path = "../..", features = ["polling-client"] }
tokio = { version = "1.21", features = ["fs", "macros", "rt", "time"] }
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
serde_json = "1"

[workspace]

[[bin]]
name = "fortress-relay-peer"
path = "src/main.rs"

[[test]]
name = "multiprocess"
path = "tests/multiprocess.rs"
