[package]
name = "signal-fish-client-godot-compat-min"
version = "0.0.0"
edition = "2021"
publish = false
rust-version = "1.94.0"

[lib]
crate-type = ["rlib"]

[dependencies]
godot = { version = "=0.4.5", features = ["experimental-wasm", "experimental-wasm-nothreads", "lazy-function-tables"] }
signal-fish-client = { path = "../..", default-features = false, features = ["polling-client"] }
signal-fish-client-godot = { path = "../../crates/signal-fish-client-godot" }

[target.'cfg(target_os = "emscripten")'.dependencies]
godot = { version = "=0.4.5", features = ["api-custom", "experimental-wasm", "experimental-wasm-nothreads", "lazy-function-tables"] }

[workspace]
