[package]
name = "signal-fish-godot-smoke"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.4.5", features = ["api-4-5", "experimental-wasm-nothreads"] }
serde_json = "1.0"
signal-fish-client = { path = "../..", default-features = false, features = ["transport-godot"] }

[workspace]
