[package]
name = "signal-fish-godot-smoke"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
raw-emscripten-proof = ["signal-fish-client/transport-websocket-emscripten"]

[dependencies]
fortress-rollback = "=0.10.0"
godot = { version = "0.4.5", features = ["api-custom", "experimental-wasm", "experimental-wasm-nothreads", "lazy-function-tables"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-fish-client = { path = "../..", default-features = false, features = ["transport-godot"] }

[workspace]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(published_docs)"] }
